# blender-agent-bot

./: .gitignore  E2E_TEST_REPORT.md  PHASE0_COMPLETE.md  PHASE0_ISSUES.md  README.md  TEST_REPORT.md  agent_core_server.py  pyproject.toml  test_addon_loading.py  test_agent_core_server.py  test_full_integration.py  test_skill_execution.py
doc/: API.md  QUICKSTART.md  README.md  SKILL_DEVELOPMENT.md
doc/archive/: CREATE_GITHUB_ISSUES.md
doc/phase0/: PHASE0_CHECKLIST.md  PHASE0_FINAL_CONFIRMATION.md  PHASE0_REVIEW_SUMMARY.md
doc/phase1/: PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_ISSUES_ANALYSIS.md  PHASE1_PROGRESS_REPORT.md
doc/planning/: plan.md
examples/: README.md  README_BOUNCE.md  SPEC_TODOLIST.md  bounce_cube_animation.py  create_bounce_via_socket.py  integration_test.py
examples/pipelines/: PIPELINE_FORMAT.md  asset_generator.yaml  batch_render.yaml  scene_setup.yaml
examples/prompts/: architect.md  beginner.md  character.md  custom_template.md  game_assets.md
examples/recipes/: 01_first_cube.md  02_simple_house.md  (+18 more)
shared/: README.md  SPEC_TODOLIST.md  __init__.py  pyproject.toml
shared/agent_types/: common.py  session_types.py
shared/config/: __init__.py  defaults.py  schema.py
shared/protocol/: __init__.py  agent_request.py  agent_response.py  engine_protocol.py  messages.py
shared/tests/: test_config.py  test_messages.py  test_protocol_models.py  test_types.py
shared/types/: __init__.py  common.py  session_types.py  tool_types.py
skills/: README.md  SPEC_TODOLIST.md
tests/: test_phase0_verification.py
(+6061 files in other folders)
